k8s_configuration/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memoris-notes-ingress
  namespace: memories-notes-app-namespace

spec:
  ingressClassName: nginx

rules:
  - http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 3001
        
        - path: /
          pathType: Prefix
          backend:  
            service:
              name: frontend-service
              port:
                number: 3000
